fix(frontend): fix modal z-index overlapped by Leaflet map

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,7 @@ body {
   background-color: var(--color-primary-light);
   color: var(--foreground);
 }
+
+.leaflet-container {
+  z-index: 0;
+}
